# sun-world

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app_instance.py  deploy_docker.sh  dev.js  dev.mjs  dev.ps1  dev.sh  docker-compose.yml  install_nvm.sh  main.py  nginx.conf  nginx000.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.md  start.sh  stop_docker.sh  tsconfig.json
.ai/: README.md
.ai/plans/: platform-roadmap.md
.ai/protocols/: agent-pipeline.md  (+2 more)
deploy/: README.md
docs/: agent-handoff.md  current-state.md  engineering-conventions.md  security-hardening-plan.md
scripts/: check-admin-alerts.py  check-admin-metrics-history.py  check-ai-interface.mjs  check-ai-manager-lazy.py  check-ai-public-entry-hidden.mjs  check-ai-public-entry-visible.mjs  check-all.mjs  check-all.sh  check-api-deploy-schema.mjs  check-api-dockerfile-cache.mjs  check-api-migration.py  check-api-schema-config-path.py  check-api-schema-types.py  check-api.sh  check-blog-detail-catalog.mjs  check-blog-detail-render.mjs  check-blog-infinite-scroll.mjs  check-blog-list-query.py  check-blog-waterfall-real-data.mjs  check-contract-route-usage.mjs  check-contracts-generate-script.mjs  check-cors-origins.py  check-dev-launcher.mjs  check-docker-build-context.mjs  check-github-actions-ci.mjs  check-github-actions-deploy.mjs  check-home-footer-layout.mjs  check-icon-boundary.mjs  check-icp-home-card.mjs  check-legacy-api-entrypoints.mjs  check-llm-config-env.py  check-md-editor-v3-migration.mjs  check-metrics-alerts.py  check-metrics-store.py  check-platform-goal-audit.mjs  check-request-metrics.py  check-root-check-script.mjs  check-rum-metrics.py  check-sun-ai-cli.mjs  check-sun-ai-contract-sync.mjs  (+27 more)
(+322 files in other folders)
