[tool.poetry]
name = "blog-end"
version = "0.1.0"
description = ""
authors = ["Zhang Xinyang"]
readme = "README.md"
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
python = "^3.11"
pydantic-core = "^2.23.3"
h11 = "^0.16.0"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pymongo = "^4.8.0"
aioredis = "^2.0.1"
redis = "^5.0.8"
motor = "^3.5.1"
loguru = "^0.7.2"
numpy = "^2.1.1"
pyyaml = "^6.0.2"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
langchain = "^1.2.1"
langchain-core = "^1.2.6"
langgraph = "^1.0.5"
langgraph-checkpoint-postgres = "^3.0.2"
asyncpg = "^0.29.0"
langgraph-prebuilt = "^1.0.5"
langchain-mistralai = "^1.1.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
httpx = "^0.28.1"
langchain-google-genai = "^4.1.3"
langchain-openai = "^1.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
